<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Confirmation message -->

    <!-- QR Code -->
    <TextView
        android:id="@+id/tvConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/event_created_message"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivQrCode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/qr_code_description"/>

    <!-- Done button -->
    <Button
        android:id="@+id/btnDone"
        android:text="@string/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>

    <!-- Save and Share buttons -->
    <LinearLayout
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button" />
    </LinearLayout>

</LinearLayout>